Adopt new language features, code cleanup